src/sass/main.scss
*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

html {
	font-size: 62.5%;
	scroll-behavior: smooth;
	scroll-padding-top: 20vh;
}

body {
	font-family: 'Poppins', sans-serif;
	font-size: 1.6rem;
	background-color: #fff;
	overflow-x: hidden;
}

// FIRST SCREEN

.hero-img {
	display: none;
	margin: 0 auto;
	position: relative;
	height: 100vh;
	width: 100vw;
	transition: height 0.8s ease;
	z-index: 1;
	overflow: hidden;
	img {
		width: 100%;
		height: 100%;
		background-position: center;
		background-repeat: no-repeat;
		background-size: cover;
	}
	&__info {
		position: absolute;
		top: 50%;
		left: 50%;
		transform: translate(-50%, -50%);
		width: 100%;
		text-align: center;
		letter-spacing: 6px;
		color: #bfcabd;
		opacity: 0;
		animation: show 5s 0.5s ease forwards;
		z-index: 3;

		h1 {
			margin-bottom: 0.5rem;
			font-size: 10rem;

			i {
				margin-right: 0.5rem;
			}
		}

		small {
			font-size: 3.5rem;
		}
	}
	&__shadow {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		background-color: rgba(0, 0, 0, 0.7);
		z-index: 2;
	}
	&__api-info {
		position: absolute;
		bottom: 2rem;
		right: 5rem;
		color: #bfcabd;
		opacity: 0;
		animation: show 3s 1.5s ease forwards;
		z-index: 100;
	}
}
.hero-img.hide {
	height: 0;
}

@keyframes show {
	to {
		opacity: 1;
	}
}
//NAVIGATION

.nav {
	display: grid;
	grid-template-rows: 3fr 1fr;
	grid-template-columns: repeat(10, 1fr);
	position: sticky;
	top: 0;
	margin: 0 auto;
	width: 100vw;
	max-width: 1200px;
	height: 20vh;
	text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
	background-color: #bfcabd;
	box-shadow: 0 -10px 20px 5px #bfcabd;
	z-index: 100;

	&__link {
		position: relative;
		display: flex;
		justify-content: center;
		align-items: flex-end;
		padding-bottom: 2.5rem;
		height: 100%;
		width: 100%;
		font-size: 1.8rem;
		text-align: center;
		text-transform: uppercase;
		text-decoration: none;
		background-size: 28%;
		background-position: 50% 20%;
		background-repeat: no-repeat;
		color: #2e4f4f;

		&--active {
			z-index: 10;
		}
	}

	&__link:nth-child(1) {
		grid-column: 1 / 3;
		background-image: url(/dist/img/english.png);
	}
	&__link:nth-child(2) {
		grid-column: 3 / 5;
		background-image: url(/dist/img/spanish.png);
	}
	&__link:nth-child(3) {
		grid-column: 5 / 7;
		background-image: url(/dist/img/german.png);
	}
	&__link:nth-child(4) {
		grid-column: 7 / 9;
		background-image: url(/dist/img/italian.jpg);
	}
	&__link:nth-child(5) {
		grid-column: 9 / -1;
		background-image: url(/dist/img/french.jpg);
	}

	&__results {
		grid-row: 2 / 3;
		grid-column: 1 / 6;
		border-right: 2px solid rgba(46, 79, 79, 0.2);
	}
	&__table {
		grid-row: 2 / 3;
		grid-column: 6 / 11;
	}

	&__results,
	&__table {
		position: relative;
		display: flex;
		align-items: center;
		justify-content: center;
		height: 100%;
		background-color: #fff;
		box-shadow: 0 -5px 5px rgba(46, 79, 79, 0.2);
		font-family: inherit;
		font-size: 2rem;
		text-align: center;
		text-decoration: none;
		transition: font-size 0.3s ease;
		cursor: pointer;

		a {
			padding: 10px 100px;
			color: #2e4f4f;
			text-decoration: none;
		}
	}
	&__link::before,
	&__link::after,
	&__table::before,
	&__table::after,
	&__results::before,
	&__results::after {
		content: '';
		position: absolute;
		width: 0;
		bottom: 20px;
		border-bottom: 2px solid #2e4f4f;
		box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
		transition: all 0.5s;
	}

	&__table::before,
	&__table::after,
	&__results::before,
	&__results::after {
		bottom: 8px;
	}

	&__link::before,
	&__results::before,
	&__table::before {
		right: 50%;
	}

	&__link::after,
	&__results::after,
	&__table::after {
		left: 50%;
	}

	&__link:hover::before,
	&__link:hover::after {
		width: 40%;
	}

	&__results:hover::before,
	&__results:hover::after,
	&__table:hover::before,
	&__table:hover::after {
		width: 10%;
	}
}

.nav-mobile {
	position: sticky;
	top: 0;
	display: none;
	grid-template-rows: 3fr 1fr;
	grid-template-columns: repeat(8, 1fr);
	align-items: center;
	width: 100vw;
	height: 20vh;
	text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
	background-color: #bfcabd;
	color: #2e4f4f;
	box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
	z-index: 100;

	.hamburger {
		z-index: 200;
		grid-row: 1 / 2;
		grid-column: 1 / 2;
	}

	&__title {
		// margin: 0 auto;
		grid-row: 1 / 2;
		grid-column: 1 / 9;
		font-size: 2.4rem;
		text-align: center;
		letter-spacing: 10px;
	}

	&__links {
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		display: flex;
		justify-content: center;
		align-items: center;
		flex-direction: column;
		height: 100vh;
		background-color: #bfcabd;
		transform: translateX(-102%);
		transition: transform 0.5s ease;
		z-index: 10;

		&--active {
			transform: translateX(0);
		}
	}

	&__link {
		margin: 0.5rem;
		padding: 1.5rem;
		width: 80%;
		font-size: 1.6rem;
		text-align: center;
		text-transform: uppercase;
		text-decoration: none;
		color: #2e4f4f;
		background-size: 8%;
		background-position: 5% 50%;
		background-repeat: no-repeat;
		transition: transform 0.3s ease;
		cursor: pointer;

		&--active {
			border-bottom: 2px solid #2e4f4f;
			text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
		}
	}

	&__link:nth-child(1) {
		grid-column: 1 / 3;
		background-image: url(/dist/img/english.png);
	}
	&__link:nth-child(2) {
		grid-column: 3 / 5;
		background-image: url(/dist/img/spanish.png);
	}
	&__link:nth-child(3) {
		grid-column: 5 / 7;
		background-image: url(/dist/img/german.png);
	}
	&__link:nth-child(4) {
		grid-column: 7 / 9;
		background-image: url(/dist/img/italian.jpg);
	}
	&__link:nth-child(5) {
		grid-column: 9 / -1;
		background-image: url(/dist/img/french.jpg);
	}

	&__results {
		grid-row: 2 / 3;
		grid-column: 1 / 5;
		border-right: 2px solid rgba(46, 79, 79, 0.4);
	}
	&__table {
		grid-row: 2 / 3;
		grid-column: 5 / -1;
	}

	&__results,
	&__table {
		display: flex;
		align-items: center;
		justify-content: center;
		height: 100%;
		color: #2e4f4f;
		background-color: #fff;
		font-family: inherit;
		font-size: 1.8rem;
		box-shadow: 0 0 15px #2e4f4f;
		text-align: center;

		a {
			padding: 10px 30px;
			color: #2e4f4f;
			text-decoration: none;
			cursor: pointer;
		}
	}
}

// MAIN SECTION

.main {
	position: relative;
	margin: 0 auto;
	display: none;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	height: 80vh;
	width: 100vw;
	max-width: 1200px;
	font-family: inherit;
	overflow-x: hidden;

	&__active {
		display: flex;
	}

	&__img {
		position: sticky;
		top: 0;
		left: 0;
		bottom: 0;
		right: 0;
		width: 100%;
		max-width: 1200px;
		height: 80vh;
		background-image: url('/dist/img/main_field_large.jpg');
		background-position: bottom;
		background-attachment: fixed;
		background-size: cover;
	}

	&__logo-img {
		position: fixed;
		top: 55%;
		left: 50%;
		transform: translate(-50%, -50%);
		width: 400px;
		height: 400px;
		opacity: 0.7;
	}

	// SCORES

	.scores {
		position: absolute;
		top: 50px;
		display: flex;
		flex-grow: 1;
		flex-direction: column;
		justify-content: flex-start;
		align-items: center;
		width: 80%;
		font-size: 2rem;
		color: #2e4f4f;

		&__container {
			width: 100%;
			padding-top: 20px;
			text-align: center;
			color: #2e4f4f;
		}

		&__round {
			margin-top: 10px;
			padding: 10px 10px;
			display: flex;
			justify-content: space-between;
			align-items: center;
			width: 100%;
			font-size: 2.5rem;
			background-color: #bfcabd;
			color: #2e4f4f;
			border: none;
			border-radius: 10px;
			box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.2);
			cursor: pointer;
			
			button {
				width: 100%;
				border: none;
				background-color: transparent;
				font-size: 2.5rem;
				font-family: inherit;
				color: #2e4f4f;
				
			}
			.fa-chevron-down {
				transition: 0.5s ease;
			}
			
			.fa-chevron-down.rotate {
				transform: rotate(180deg);
				transform-origin: center;	
			}
			
		}

		&__score {
			display: none;
			justify-content: space-between;
			font-weight: lighter;
			margin-top: 10px;
			padding: 10px;
			background-color: rgba(255, 255, 255, 1);
			border-radius: 10px;
			box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.2);
			transition: 0.3s ease;

			&--active {
				display: flex;
			}

			span {
				font-weight: normal;
				flex-grow: 1;
			}
		}
	}

	// STANDINGS

	.standings {
		display: table;
		position: absolute;
		top: 50px;
		left: 50%;
		transform: translateX(-50%);
		font-size: 1.5rem;
		background-color: rgba(255, 255, 255, 0.7);
		color: #2e4f4f;
		border-radius: 10px;
		border-collapse: collapse;

		&__teams tr,
		&__header tr {
			border-bottom: 2px solid #000;
		}

		&__teams tr:hover {
			background-color: rgba(191, 202, 189, 0.7);
		}

		&__teams tr:last-child {
			border-bottom: none;
		}

		&__header th,
		&__teams td {
			text-align: center;
			padding: 0.3em 0.75em;
		}

		&__teams-name-full {
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;
		}

		&__teams td {
			font-weight: bolder;
		}

		&__teams-team,
		&__header-team {
			display: flex;
			gap: 0.5em;
			align-items: center;
			justify-content: center;
		}

		&__header-team {
			padding: 0.3em 5em;
		}

		&__teams-team img {
			width: 1.5em;
			height: 1.5em;
			object-fit: contain;
		}
	}
}

// MEDIA

@media (max-width: 768px) {
	.nav {
		display: none;
	}

	.nav-mobile {
		display: grid;
	}

	.main {
		.standings {
			font-size: 1.3rem;
		}
	}
}

@media (max-width: 576px) {
	.nav-mobile__title {
		grid-column: 2 / -1;
		text-align: center;
		font-size: 1.4rem;
		letter-spacing: 5px;
	}

	.main {
		.standings {
			font-size: 1rem;

			&__header-for,
			&__header-against,
			&__header-difference,
			&__teams-for,
			&__teams-against,
			&__teams-difference {
				display: none;
			}
		}

		&__img {
			background-image: url('/dist/img/main_field.jpg');
		}

		&__logo-img {
			width: 200px;
			height: 200px;
		}
	}
}

@media (max-width: 350px) {
	.nav-mobile__title {
		font-size: 1rem;
	}

	.main {
		.standings {
			font-size: 0.8rem;
		}
	}
}

@media (max-height: 800px) {
	.nav {
		height: 12vh;
		&__link {
			padding-bottom: 0.5rem;
			padding-top: 0.5rem;
			font-size: 1.8rem;
			background-size: 10%;
			background-position: left 1rem bottom 0.6rem;
		}

		&__link:nth-child(1),
		&__link:nth-child(3) {
			background-position: left 0.1rem bottom 0.6rem;
		}
		&__link::before,
		&__link::after {
			bottom: 2px;
		}
	}

	.main {
		height: 88vh;
		&__img {
			height: 88vh;
		}
		&__logo-img {
			width: 200px;
			height: 200px;
		}
	}
}
@media (max-height: 370px) {
	.main {
		&__logo-img {
			width: 150px;
			height: 150px;
			top: 70%;
		}
	}
}

